--- a/smart.html
+++ b/smart.html
@@ -2,7 +2,7 @@
   <head></head>
   <body>
     <h1>SmartUpload.js DEMO</h1>
-    <script src="smart.js"></script>
+    <script src="smartupload.js"></script>
     <input id="fileId" type="file">
     
     <script>
