--- a/smart.html
+++ b/smart.html
@@ -7,7 +7,7 @@
     
     <script>
       // Create SmartUpload object
-      var smartUp = new SmartUpload("http://127.0.0.1/store/append/?apikey=testapikey", "fileId");
+      var smartUp = new SmartUpload("http://127.0.0.1/upload.php", "fileId");
 
       /*
         You could override events simply:
