--- a/smart.html
+++ b/smart.html
@@ -8,7 +8,7 @@
     
     <script src="smartupload.js"></script>
     <script>
-      var smartUp = new SmartUpload("http://127.0.0.1/upload.php", "fileId");
+      var smartUp = new SmartUpload("fileId", "http://127.0.0.1/upload.php");
     </script>
     
   </body>
